[package]
name = "toss-cli"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
build = "build.rs"

[[bin]]
name = "toss"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
toss-core = { path = "../toss-core" }
unicode-width = "0.2.0"

[dev-dependencies]
async-trait = "0.1.88"
tempfile = "3.18.0"
