[package]
name = "toss-core"
version = "0.1.3"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["clock"] }
dirs = "6.0.0"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "time"] }

[dev-dependencies]
parking_lot = "0.12.3"
tempfile = "3.18.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
